# Prediction1

./: .gitignore  CLAUDE.md  Dockerfile  INTEGRATION_GUIDE.md  README.md  analyze_performance.py  betting_models.py  calibration_tracker.py  check_db.py  cli.py  config.py  continuous_bot.py  diagnose_kalshi.py  enhanced_market_context.py  env_template.txt  kalshi_client.py  openai_utils.py  position_monitor.py  pyproject.toml  reconciliation.py  render.yaml  research_client.py  run_migration.py  server.py  setup_postgres.py  start_trading.py  system_walkthrough.ipynb  test_api.py  trading_bot.py  trendradar_client.py  validate.py  validate_pipeline.py  validate_pipeline_to_dashboard.py  validate_production.py  validate_system_airtight.py
dashboard/: __init__.py  api.py  auth.py  broadcaster.py  websocket.py
dashboard/static/: app.js  index.html  style.css
db/: __init__.py  database.py  postgres.py  queries.py  schema.sql
db/migrations/: 002_position_tracking.sql
migrations/: __init__.py  migrate_csv.py  migrate_json.py  v2_signal_quality.sql
tests/: __init__.py  test_api.py  test_config_validation.py  test_db_migration_v2.py  test_prompt_hygiene.py  test_signal_quality_v2.py  test_trendradar_client.py
