[project]
name = "kalshi-trading-bot"
version = "1.0.0"
description = "Simple Kalshi trading bot with Octagon research and OpenAI decision making"
authors = [
    {name = "Octagon", email = "support@octagon.ai"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "websockets>=11.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
    "openai>=1.0.0",
    "aiosqlite>=0.19.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "apscheduler>=3.10.0",
    "asyncpg>=0.29.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
trading-bot = "trading_bot:cli"
trading-bot-continuous = "continuous_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "trading_bot.py",
    "continuous_bot.py",
    "config.py",
    "kalshi_client.py",
    "research_client.py",
    "betting_models.py",
    "reconciliation.py",
    "trendradar_client.py",
    "db/",
    "migrations/",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 